# ghost-db

./: .env.example  .gitignore  Cargo.toml  README.md  makefile  rust-toolchain.toml
ghostdb/: Cargo.toml
ghostdb/src/: lib.rs
ghostdb/src/processor/: mod.rs  processorcore.rs
ghostdb/src/systemcore/: mod.rs  systemcore.rs  systemmessages.rs
http-server/: Cargo.toml
http-server/src/: main.rs
http-server/src/controllers/: indexcontrollers.rs  mod.rs
http-server/src/models/: datatraffic.rs  mod.rs
http-server/src/providers/: dbprovider.rs  mod.rs
shell/: Cargo.toml
shell/src/: main.rs
shell/src/shellcore/: commands.rs  mod.rs  shellcore.rs  welcome.rs
