[package]
name = "ghostdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
darkbird = "1.1.1"
serde = {version = "1.0.137",  features = ["derive"]}
serde_derive = "1.0.137"
dashmap = "5.3.3"
tokio = "1.18.2"
