[package]
name = "ghostdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
darkbird = "1.1.1" # To Remove
serde = {version = "1.0.137",  features = ["derive"]}
serde_derive = "1.0.137"
dashmap = "5.3.3"
tokio = "1.18.2"

# Own WAL
simple_wal = "0.3.0"
bincode = "2.0.0-rc.1"
